welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:2: error: not found: value isMum
                                                                              else if (isMorning) {if (isMum) (return true) else return false}
                                                                                                       ^